--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -57,5 +57,11 @@
            </dict>
        </array>
        <!-- End of the Google Sign-in Section -->
+       <key>NSPhotoLibraryUsageDescription</key>
+       <string>Need to upload image</string>
+       <key>NSCameraUsageDescription</key>
+       <string>Need to upload image</string>
+       <key>NSMicrophoneUsageDescription</key>
+       <string>Need to upload image</string>
    </dict>
    </plist>
