--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,12 +50,12 @@ dependencies:
   photo_view: ^0.13.0
   intl: ^0.17.0
   flutter_credit_card: ^3.0.1
-  credit_card_input_form: ^2.3.0
   flutter_clean_calendar: ^1.1.0
   table_calendar: ^3.0.3
   cached_network_image: ^3.1.0
   firebase_messaging: ^11.1.0
   flutter_local_notifications: ^9.1.4
+  omise_flutter: ^0.1.6
  
 
  
