--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,6 @@ dependencies:
   form_field_validator: ^1.1.0
   http: ^0.13.3
   image_picker: ^0.8.1+3
-  flutter_speed_dial: ^5.0.0+1
   dio: ^4.0.0
   photo_view: ^0.13.0
   intl: ^0.17.0
@@ -56,6 +55,18 @@ dependencies:
   firebase_messaging: ^11.1.0
   flutter_local_notifications: ^9.1.4
   omise_flutter: ^0.1.6
+  flutter_speed_dial: ^6.0.0
+  pdf: ^3.8.1
+  printing: ^5.9.1
+  
+  
+
+  
+  
+  
+  
+  
+  
  
 
  
